# claude-code-in-devcontainer-example

./: README.md
.claude/: settings.json
.devcontainer/: compose.yaml  devcontainer.json  install-claude-code.sh  update-workspace-owner.sh
.devcontainer/claude-code/: Dockerfile
.devcontainer/firewall/: devcontainer-feature.json  install.sh
.devcontainer/maven/: settings.xml
.devcontainer/proxy/: squid.conf  whitelist.txt
.devcontainer/setup-for-claude-code/: devcontainer-feature.json  install.sh
.devcontainer/with-owattayo/: devcontainer.json
.devcontainer/without-owattayo/: devcontainer.json
.devcontainer/workspace-owner/: devcontainer-feature.json  install.sh  update-workspace-owner.sh
examples/maven-example/: pom.xml
examples/maven-example/src/main/java/com/example/: MavenExampleApplication.java
examples/maven-example/src/test/java/com/example/: MavenExampleApplicationTests.java
examples/python-example/: pyproject.toml
